[gd_scene load_steps=6 format=3 uid="uid://cdgfhjpgqxivk"]

[ext_resource type="Script" path="res://Scenes/Components/Animated button/v2/Animated Button.gd" id="1_btn2k"]

[sub_resource type="Animation" id="Animation_haqul"]
resource_name = "Button pressed"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8)]
}

[sub_resource type="Animation" id="Animation_kqull"]
resource_name = "Button released"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_xq3bl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w2si7"]
_data = {
"Button pressed": SubResource("Animation_haqul"),
"Button released": SubResource("Animation_kqull"),
"RESET": SubResource("Animation_xq3bl")
}

[node name="Animated Button" type="Button"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(50, 60)
offset_right = 50.0
offset_bottom = 60.0
theme_type_variation = &"RefreshButton"
script = ExtResource("1_btn2k")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -50.0
offset_right = 5.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"RefreshButton"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w2si7")
}

[connection signal="button_down" from="Control/Button" to="." method="_press_button"]
[connection signal="button_up" from="Control/Button" to="." method="_release_button"]
[connection signal="pressed" from="Control/Button" to="." method="_emit_signal"]
